# IRCI

./: .env.example  .gitignore  .pre-commit-config.yaml  ALPHA_VANTAGE_INTEGRATION.md  API_RECOMMENDATIONS.md  CLAUDE.md  CLEANUP_GUIDE.md  CORPORATE_EVENTS_IMPLEMENTATION.md  DEPLOYMENT.md  IMPROVING_STATISTICAL_SIGNIFICANCE.md  IRCI.html  IRCI_CONTEXT_FOR_CLAUDE.md  IRCI_lowcode_template.xlsx  MULTI_QUARTER_FEATURE.md  PATCH_cli_quarter.diff  QUICKSTART.md  README.md  README_WEBAPP.md  README_bridge.md  README_news_puller.md  SENTIMENT_ANALYSIS_STATUS.md  SESSION_SUMMARY.md  TREND_ANALYSIS_FEATURES.md  WEB_APP_GUIDE.md  WEB_APP_SUMMARY.md  app.py  cognitive-wargaming-jfq.tex  export_schema.csv  ff_5f_daily.parquet  irci_exporter.py  irci_user_notes.json  manifest.json  news_pull.py  news_pull_v2.py  presentation.html  pyproject.toml  requirements-webapp.txt  requirements.txt  run_example.sh  run_example_with_news.sh  (+2 more)
.ipynb_checkpoints/: news_pull_v3-checkpoint.py
.streamlit/: config.toml  secrets.toml.example
IRCI_files/: fSPM3JZhlIc.html  inner-frame-minified(1).html  inner-frame-minified(2).html  inner-frame-minified(3).html  inner-frame-minified(4).html  inner-frame-minified(5).html  inner-frame-minified(6).html  inner-frame-minified.html  intermediate-frame-minified(1).html  intermediate-frame-minified(2).html  intermediate-frame-minified(3).html  intermediate-frame-minified(4).html  intermediate-frame-minified(5).html  intermediate-frame-minified(6).html  intermediate-frame-minified.html  preview.html  proxy.html  rs=AA2YrTtxO8JGsyK37EOUOfz1PbRPanS50Q  (+7 more)
(+90 files in other folders)
