[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irci"
version = "0.1.0"
description = "IRCI: Python package and API scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bonnie Rushing" }]
dependencies = [
  "pyarrow>=15",
  "numpy>=1.26",
  "requests>=2.32",
  "typer[all]>=0.12.0",
  "pydantic>=2.7",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "feedparser>=6.0.11",
  # Web app dependencies
  "streamlit>=1.51.0",
  "plotly>=6.5.0",
  "yfinance>=0.2.0",
  "transformers>=4.30.0",
  "vaderSentiment>=3.3.2",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0"
  # Uncomment to enable the API out of the box:
  # ,"fastapi>=0.111","uvicorn[standard]>=0.30"
]
[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "black>=24.3", "mypy>=1.10", "pre-commit>=3.7", "build>=1.2"]
[project.scripts]
irci = "irci.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["irci*"]
exclude = ["tests*", "data*", "outputs*"]
